--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,23 +1,28 @@
 {
   "compilerOptions": {
-    "rootDir": ".",
+    "target": "ES2020",
+    "module": "commonjs",
+    "lib": ["ES2020"],
     "outDir": "./dist",
-    "target": "ES2023",
-    "module": "CommonJS",
-    "moduleResolution": "node",
+    "rootDir": ".",
     "strict": true,
     "esModuleInterop": true,
+    "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "lib": ["esnext"],
-    "types": ["node"],
-    "sourceMap": true,
+    "resolveJsonModule": true,
     "declaration": true,
     "declarationMap": true,
-    "skipLibCheck": true,
-    "noUncheckedIndexedAccess": false,
-    "exactOptionalPropertyTypes": false,
-    "isolatedModules": false,
-    "jsx": "react-jsx"
+    "sourceMap": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noImplicitReturns": true,
+    "noFallthroughCasesInSwitch": true,
+    "moduleResolution": "node",
+    "allowSyntheticDefaultImports": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "typeRoots": ["./node_modules/@types", "./src/types"]
   },
-  
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "dist", "**/*.test.ts"]
 }
